@@ -152,11 +152,11 @@ public class OperatingSystem
 
 	//{{{ isDOSDerived() method
 	/**
-	 * Returns if we're running Windows 95/98/ME/NT/2000/XP/Vista/Win7, or OS/2.
+	 * Returns if we're running Windows 95/98/ME/NT/2000/XP/Vista/Win7.
 	 */
 	public static boolean isDOSDerived()
 	{
-		return isWindows() || isOS2();
+		return isWindows();
 	} //}}}
 
 	//{{{ isWindows() method
@@ -184,15 +184,6 @@ public class OperatingSystem
 	public static boolean isWindowsNT()
 	{
 		return os == WINDOWS_NT;
-	} //}}}
-
-	//{{{ isOS2() method
-	/**
-	 * Returns if we're running OS/2.
-	 */
-	public static boolean isOS2()
-	{
-		return os == OS2;
 	} //}}}
 
 	//{{{ isUnix() method
@@ -297,7 +288,6 @@ public class OperatingSystem
 	private static final int UNIX = 0x31337;
 	private static final int WINDOWS_9x = 0x640;
 	private static final int WINDOWS_NT = 0x666;
-	private static final int OS2 = 0xDEAD;
 	private static final int MAC_OS_X = 0xABC;
 	private static final int VMS = 0xDEAD2;
 	private static final int UNKNOWN = 0xBAD;
@@ -324,10 +314,6 @@ public class OperatingSystem
 			else if(osName.contains("Windows"))
 			{
 				os = WINDOWS_NT;
-			}
-			else if(osName.contains("OS/2"))
-			{
-				os = OS2;
 			}
 			else if(osName.contains("VMS"))
 			{
